Move to partial folder partial wallet views.

--- a/templates/wallets/dashboard.html.twig
+++ b/templates/wallets/dashboard.html.twig
@@ -12,9 +12,9 @@
 
 {% block page_content %}
 
-    {% include 'wallets/head-dashboard.html.twig' %}
-    {% include 'wallets/position-box.html.twig' %}
-    {% include 'wallets/operation-box.html.twig' %}
+    {% include 'wallets/partial/head-dashboard.html.twig' %}
+    {% include 'wallets/partial/position-box.html.twig' %}
+    {% include 'wallets/partial/operation-box.html.twig' %}
 
 {% endblock %}
 
