Import stock market.
- Created import stock market command.
- Import stock market.
- Fixed stock market view, edit button.
- Remove stock market view, view button.

--- a/templates/stock_market/index.html.twig
+++ b/templates/stock_market/index.html.twig
@@ -60,13 +60,15 @@
                 },
             });
 
-            const form = new StockMarketForm(swalFormOptionsText);
+            const form = new StockMarketForm(
+                swalFormOptionsText,
+                '#js-manager-{{ entity_name|lower|replace({' ': '_'}) }}-form-template',
+            );
 
             crudManager.withForm(form);
             // add button create
             crudManager.withCreateButton();
             // add button edit
-            crudManager.withViewButton();
             crudManager.withEditButton();
             // add button delete
             crudManager.withDeleteButton();
