Import stock market.
- Created import stock market command.
- Import stock market.
- Fixed stock market view, edit button.
- Remove stock market view, view button.
- Added yahoo scraper.
- Update stock from from scrap data from yahoo finance page.

--- a/templates/Components/Macros/crud-manage-render.html.twig
+++ b/templates/Components/Macros/crud-manage-render.html.twig
@@ -8,9 +8,13 @@
     {% set _currency = currency |default('euro') %}
 
     {% if _currency == 'euro' %}
-        &euro; <%= {{ value }}.toFixed(2).toString().replace(/\./g, ",") %>
+        <% if ({{ value }} ) { %>
+            &euro; <%= {{ value }}.toFixed(2).toString().replace(/\./g, ",") %>
+        <% } %>
     {% elseif _currency == '$' %}
-        <%= {{ value }}.toFixed(2).toString().replace(/\./g, ",") %> $
+        <% if ({{ value }} ) { %>
+            <%= {{ value }}.toFixed(2).toString().replace(/\./g, ",") %> $
+        <% } %>
     {% endif %}
 {% endmacro render_currency %}
 
