--- a/templates/Components/ui/stock-price.html.twig
+++ b/templates/Components/ui/stock-price.html.twig
@@ -12,8 +12,8 @@
 <% } %>
 
 <div class="stock-price-block">
-    <span class="last-price"><%= value %></span>
-    <span class="change <%= changeClass %>"><%= change %> (<%= changePercentage %>%)</span>
+    <span class="last-price">{{ 'value'|compile_decimal_tmpl(compile) }}</span>
+    <span class="change <%= changeClass %>">{{ 'change'|compile_decimal_tmpl(compile) }} ({{ 'changePercentage'|compile_decimal_tmpl(compile) }}%)</span>
     <div class="text-left" style="margin-top: -8px;">
         <span class="updated-at">At close:  4:01PM EDT</span>
     </div>
