Add stock values from yahoo finance.
- Added the stock values to the form while create when click the button. The values are fetched from yahoo finance.
- Added yahoo_symbol to market entity to be able to set market too.
- Created migration for yahoo_symbol.
- Added load market and name when these are not settled.
- Added hidden inputs to form stock to update them with the other values.
- Added macro hidden to remove the div.

--- a/assets/css/StockForm.scss
+++ b/assets/css/StockForm.scss
@@ -15,3 +15,9 @@
     font-size: 14px;
 }
 
+#swal2-content {
+    button#yahoo_scrape {
+        margin-right: 15px;
+        float: right;
+    }
+}
