Fix toggleExpanded and add market to the stock view.

--- a/templates/stocks/index.html.twig
+++ b/templates/stocks/index.html.twig
@@ -139,7 +139,7 @@
                     let $button = $(e.currentTarget);
 
                     if ($button.data('toggle') === 'push-menu') {
-                        window.crudManager.toggleExpanded();
+                        crudManager.toggleExpanded();
                     }
                 }
             );
