Add sort option to CRUD manager.
Now CRUD manager has the option to sort by criteria the records in the table. By default does not sort by any criteria.

Updated stock dividend table to sort by exDate.

--- a/templates/stocks_dividend/index.html.twig
+++ b/templates/stocks_dividend/index.html.twig
@@ -59,6 +59,17 @@
                     showPerPageTemplate: '#js-manager-{{ entity_name|lower|replace({' ': '_'}) }}-show-per-page-template',
                     rowTemplate: '#js-manager-{{ entity_name|lower|replace({' ': '_'}) }}-row-template',
                 },
+                sort: function (aStockDividend, bStockDividend) {
+                    if (aStockDividend.exDate > bStockDividend.exDate) {
+                        return -1;
+                    }
+
+                    if (aStockDividend.exDate < bStockDividend.exDate) {
+                        return -1;
+                    }
+
+                    return 0;
+                }
             });
 
             // Create form use in crudManager
