--- a/templates/stocks_dividend/index.html.twig
+++ b/templates/stocks_dividend/index.html.twig
@@ -60,8 +60,8 @@
                     rowTemplate: '#js-manager-{{ entity_name|lower|replace({' ': '_'}) }}-row-template',
                 },
                 sort: function (aStockDividend, bStockDividend) {
-                    let a = new Date(aStockDividend);
-                    let b = new Date(bStockDividend);
+                    let a = new Date(aStockDividend.exDate);
+                    let b = new Date(bStockDividend.exDate);
 
                     return a > b ? -1 : a < b ? 1 : 0;
                 }
