--- a/templates/stocks/partial/view.html.twig
+++ b/templates/stocks/partial/view.html.twig
@@ -32,7 +32,8 @@
                         },
                         {
                             'key': 'Ex-Dividend Date',
-                            'value': 'open',
+                            'value': 'exDate',
+                            'render': 'date'
                         },
                     ],
                     'tmpl': true,
