--- a/templates/wallets/partial/head-dashboard.html.twig
+++ b/templates/wallets/partial/head-dashboard.html.twig
@@ -8,18 +8,18 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Invested'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.invested }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.invested|round(2) }}</span>
                     </div>
                 </div>
                 <div class="row separator"></div>
                 <div class="row">
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Dividends'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.dividend }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.dividend|round(2) }}</span>
                     </div>
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Benefits'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.benefits }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.benefits|round(2) }}</span>
                     </div>
                 </div>
             </div>
@@ -36,22 +36,22 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Capital'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.capital }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.capital|round(2) }}</span>
                     </div>
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Net Capital'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.capital }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.capital|round(2) }}</span>
                     </div>
                 </div>
                 <div class="row separator"></div>
                 <div class="row">
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Margin'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.capital }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.capital|round(2) }}</span>
                     </div>
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Funds'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.funds }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.funds|round(2) }}</span>
                     </div>
                 </div>
             </div>
@@ -68,18 +68,18 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Commissions'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.commissions }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.commissions|round(2) }}</span>
                     </div>
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Interest'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.interest }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.interest|round(2) }}</span>
                     </div>
                 </div>
                 <div class="row separator"></div>
                 <div class="row">
                     <div class="col-xs-6 pull-right">
                         <span class="info-box-text">{{ 'Connection'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.connection }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.connection|round(2) }}</span>
                     </div>
                 </div>
             </div>
